WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269392
WebKitSwift.h:26:9: error: 'WebKitSwift/WKSLinearMediaPlayer.h' file not found (in target 'WebKit' from project 'WebKit')
https://bugs.webkit.org/show_bug.cgi?id=269392
Summary
WebKitSwift.h:26:9: error: 'WebKitSwift/WKSLinearMediaPlayer.h' file not foun...
Dana Estra
Reported
2024-02-14 12:18:00 PST
WebKitSwift.h:26:9: error: 'WebKitSwift/WKSLinearMediaPlayer.h' file not found (in target 'WebKit' from project 'WebKit')
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2024-02-14 12:18:07 PST
<
rdar://problem/122956083
>
Dana Estra
Comment 2
2024-02-14 12:19:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24443
EWS
Comment 3
2024-02-14 19:10:21 PST
Committed
274691@main
(5bdc3dad5f5b): <
https://commits.webkit.org/274691@main
> Reviewed commits have been landed. Closing PR #24443 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug