WebKitSwift.h:26:9: error: 'WebKitSwift/WKSLinearMediaPlayer.h' file not found (in target 'WebKit' from project 'WebKit') https://bugs.webkit.org/show_bug.cgi?id=269392 rdar://122956083

Reviewed by Andy Estes.

Removing usage of WKLinearMediaPlayerDelegate and WKSLinearMediaPlayer.

* Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.h:
* Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.mm:
(WebCore::PlaybackSessionInterfaceAVKit::linearMediaPlayer const): Deleted.
* Source/WebCore/platform/ios/PlaybackSessionInterfaceIOS.h:
* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.h:
(): Deleted.
* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.mm:
(WebKit::PlaybackSessionInterfaceLMK::PlaybackSessionInterfaceLMK):
(WebKit::PlaybackSessionInterfaceLMK::durationChanged):
(WebKit::PlaybackSessionInterfaceLMK::currentTimeChanged):
(-[WKLinearMediaPlayerDelegate initWithInterface:]): Deleted.
(): Deleted.
(WebKit::PlaybackSessionInterfaceLMK::invalidate): Deleted.
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.h:
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm:
(WebKit::VideoPresentationInterfaceLMK::linearMediaPlayer const): Deleted.

Canonical link: https://commits.webkit.org/274691@main